@@ -23,7 +23,6 @@ perl                 = 5.008001
 Test2                = 1.302022
 Test2::Suite         = 0.000030
 Test2::Workflow      = 0.000008
-Import::Into         = 1.002000
 Devel::Declare       = 0.006011
 B::Hooks::EndOfScope = 0.08
 
