@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Stop using Import::Into (too many deps)
+    - Remove experimental notice
+
 0.000002  2016-05-30 07:43:48-07:00 America/Los_Angeles
 
     - Update for stable Test2
